# geosparql-etl

./: .gitignore  README.md  pyproject.toml
src/geosparql-etl/: geojson_to_geosparql_etl.py  mongodb_to_rdf.py  mongodb_to_rdf_updated.py  mongodb_to_rdf_v2.py  nuclear_segmentation_etl.py  nuclear_segmentation_etl_v2.py
src/geosparql-etl/debug-mongo/: analyze_schema_and_indexes.py  diagnose_missing_marks.py  process_null_marks.py  process_orphaned_marks.py
src/geosparql-etl/helpers/: download_polygons.sh  extract_all.sh
src/geosparql-etl/json-etl/: README.md  add_description.py  geojson_to_geosparql_etl.py  remove_metadata.py
src/geosparql-etl/mongo-etl/: .env.example  Turtle File Summary.md  build_indexes.sh  fix_ttl_identifiers.py  mark_recovery_pipeline.py  mongodb_to_rdf.py  mongodb_to_rdf_fixed.py  mongodb_to_rdf_updated.py  recovery_analysis_and_plan.md  remove_loinc.sh  remove_loinc_xargs.sh  requirements.txt  sha256_pipeline.py  update_ttl_hashes.py
src/geosparql-etl/mongo-etl/utils/: README.md  __init__.py  config.py  rdf_utils.py  serialization.py
src/geosparql-etl/segmentation-etl/: README.md  nuclear_segmentation_etl.py
src/geosparql-etl/sha256-hash/: process_specific_folders.py  sha256-csv-2019.md  sha256-csv-2019.py  sha256-json-paad.py  sha256_pipeline.py  update_hashes.py  update_hashes_parallel.py  update_ttl_gz_from_json.py
src/geosparql-etl/utils/: README.md  __init__.py  checkpoint.py  file_utils.py  geometry.py  logger.py  mongo_client.py
