[project]
name = "geosparql-etl"
version = "0.1.2"
description = "Convert geospatial and scientific data into GeoSPARQL-compliant RDF"
readme = "README.md"
requires-python = ">=3.9"
# No external dependencies required
dependencies = [
    "rdflib>=7.4.0",
    "pymongo>=4.15.4",
    "tqdm>=4.67.1",
    "ujson>=5.11.0",
    "shapely>=2.0.7",
]
